# Run_Android_Anywhere

./: .env.example  .gitignore  Cargo.toml  LICENSE  justfile  package-lock.json  package.json  redocly.yaml  rustfmt.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: app.rs  artifacts.rs  auth.rs  config.rs  debug_sessions.rs  debug_token.rs  error.rs  events.rs  extract.rs  jobs.rs  lib.rs  main.rs  object_store.rs  observability.rs  params.rs  projects.rs  queue.rs  request_context.rs  router.rs  runtime_profiles.rs  service_error.rs  state.rs  uploads.rs  webhook.rs  webhooks.rs  workers.rs
crates/api/tests/: control_plane_contract.rs  control_plane_integration.rs  object_store_integration.rs  queue_integration.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: api.rs  error.rs  lib.rs  primitives.rs  runtime.rs  state_machine.rs  worker.rs
crates/contracts/tests/: openapi_parity.rs
crates/repository/: Cargo.toml  README.md
crates/repository/src/: auth.rs  codec.rs  error.rs  jobs.rs  lib.rs  misc.rs  models.rs  outbox.rs  rows.rs  uploads.rs  workers.rs
crates/repository/tests/: integration.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: CONTRIBUTING.md
docs/Architecture/: ENHANCED_ARCHITECTURE.md
docs/Parts/: PART_01_FOUNDATIONS.md  PART_02_DATA_LAYER.md  PART_03_CONTROL_PLANE_API.md  PART_04_QUEUE_SCHEDULER_RECONCILER.md  PART_05_WORKER_AND_EMULATOR_ADAPTER.md  PART_06_COMPOSE_STACK.md  PART_07_DASHBOARD.md  PART_08_BROWSER_EMULATOR_PACKAGE.md  PART_09_WEBRTC_DEBUG_E2E.md  PART_10_APPIUM_AUTOMATION.md  PART_11_KUBERNETES_DEPLOY.md  PART_12_REDROID_CUTTLEFISH_ADAPTERS.md  PART_13_OBSERVABILITY_HARDENING_WARMPOOLS.md  PART_14_COMMERCIAL_CI_LAUNCH.md  PART_15_BROWSER_NATIVE_WASM_RESEARCH.md
migrations/: 0001_projects_api_keys.up.sql  0002_uploads_runtime_profiles.down.sql  0002_uploads_runtime_profiles.up.sql  0003_workers_jobs.down.sql  0003_workers_jobs.up.sql  0004_job_events_artifacts.down.sql  0004_job_events_artifacts.up.sql  0005_debug_audit_webhooks.down.sql  0005_debug_audit_webhooks.up.sql  0006_seed_runtime_profiles.down.sql  0006_seed_runtime_profiles.up.sql  0007_control_plane_outbox.down.sql  0007_control_plane_outbox.up.sql
openapi/: v1.yaml
