[package]
name = "run-anywhere-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-nats = "=0.42.0"
async-trait = "=0.1.88"
aws-sdk-s3 = { version = "=1.79.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
axum = { version = "=0.8.8", features = ["macros"] }
base64 = "=0.22.1"
chrono = { version = "=0.4.41", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "=0.3.31"
jsonwebtoken = { version = "=9.3.1", default-features = false, features = ["use_pem"] }
opentelemetry = { version = "=0.28.0", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "=0.28.0", default-features = false, features = ["http-proto", "reqwest-rustls", "trace"] }
opentelemetry_sdk = { version = "=0.28.0", default-features = false, features = ["rt-tokio", "trace"] }
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
run-anywhere-contracts.workspace = true
run-anywhere-repository.workspace = true
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
subtle = "=2.6.1"
thiserror = "=2.0.18"
time = "=0.3.41"
tokio = { version = "=1.45.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "=0.5.2", features = ["limit", "timeout", "util"] }
tower-http = { version = "=0.6.8", features = ["catch-panic", "compression-gzip", "request-id", "timeout", "trace"] }
tracing = "=0.1.44"
tracing-opentelemetry = { version = "=0.29.0", default-features = false }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
url = "=2.5.7"
uuid = { version = "=1.16.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "=0.1.3"
sqlx = { version = "=0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }

[lints]
workspace = true
