[package]
name = "run-anywhere-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure shared contracts for Run Android Anywhere"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
utoipa = { version = "5.4.0", features = ["chrono"] }

[dev-dependencies]
serde_yaml = "0.9.34"

[lints]
workspace = true
