[package]
name = "run-anywhere-repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PostgreSQL persistence for Run Android Anywhere"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde", "std"] }
rand = "0.8.5"
run-anywhere-contracts.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "=0.8.6", default-features = false, features = ["chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
